Change the way products' prices are returned from the API
